fix: putting sidebar on top of other components on mobile

--- a/src/app/core/ui/sidebar/sidebar.component.scss
+++ b/src/app/core/ui/sidebar/sidebar.component.scss
@@ -108,6 +108,7 @@
 
     background-color: red;
     position: absolute;
+    z-index: 100000;
 
   }
 
